<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ByTourism1</string>
    <string name="sight">景点</string>
    <string name="xiamen_university">厦门大学</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_string">主页</string>
    <string name="discount_string">打折</string>
    <string name="my_string">我的</string>
    <string name="more_string">更多</string>
    <string name="search_name">搜索</string>
    <string name="hot_sight">热门景点</string>
    <string name="sight_sort">筛选</string>
    <string name="login_name">请点击登入</string>
    <string name="evaluate">评价</string>
    <string name="my_track">我的足迹</string>
    <string name="my_friend">我的好友</string>
    <string name="my_collect">我的收藏</string>
    <string name="sight_information">景点详情</string>
    <string name="collect">收藏</string>
    <string name="s_city">选择城市</string>
    <string name="bj">北京</string>
    <string name="sh">上海</string>
    <string name="xm">厦门</string>
    <string name="university">大学</string>
    <string name="my_city">自定义城市</string>
    <string name="path">路线</string>
    <string name="invite">邀请</string>

    <string name="scenic">景点</string>
    <string name="gragshop">酒店收藏</string>
    <string name="ticket">门票收藏</string>
	<string name="cultural_religion">宗教文化</string>
    <string name="signout">未登录</string>
    <string name="signin">已登录</string>
</resources>
