<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
         <ImageView
             android:layout_marginLeft="5dp"
        android:id="@+id/pic_one"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:src="@drawable/xiamen_three" />

     <TextView
         android:id="@+id/text_scenic1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/pic_one"
         android:text="@string/xiamen_university"
         android:layout_marginLeft="8dp"
         android:textColor="#000000"
         android:textSize="18sp" />

      <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/text_scenic1"
          android:layout_below="@+id/text_scenic1"
          android:layout_marginTop="16dp"
          android:text="@string/cultural_religion" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/textView1"
          android:layout_alignBottom="@+id/textView1"
          android:layout_toRightOf="@+id/text_scenic1"
          android:text="@string/university" />

      <ImageView
          android:id="@+id/imagePrice"
          android:layout_width="10dp"
          android:layout_height="10dp"
          android:layout_above="@+id/textView2"
          android:layout_alignParentRight="true"
          android:layout_marginRight="60dp"
          android:src="@drawable/price" />

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@+id/textView2"
          android:layout_alignLeft="@+id/imagePrice"
          android:layout_marginLeft="14dp"
          android:text="68" 
          android:textColor="#EA8010"
          android:textSize="25sp"
          
          
          />

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignTop="@+id/imagePrice"
          android:layout_toRightOf="@+id/textView3"
          android:text="起" />
<!-- style="@style/MyRatingBar" -->
      <RatingBar
          android:id="@+id/ratingBar1"
          
          android:layout_width="50dp"
          android:layout_height="20dp"
          android:layout_below="@+id/pic_one"
          android:layout_marginTop="42dp"
          android:isIndicator="true"
          android:numStars="5"
          android:rating="4" />
     
</RelativeLayout>