<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:showDividers="end">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableLeft="@drawable/arrow"
                android:text="景点" />

            <AutoCompleteTextView
                android:id="@+id/edit_Search1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/input_search"
                android:completionThreshold="1"
                android:drawableLeft="@drawable/mirror"
                android:ems="10"
                android:hint="@string/search_name"
                android:imeOptions="actionSearch" />

            <Button
                android:id="@+id/find_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="查询" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:showDividers="end"
            
            >

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" 
                android:text="@string/hot_sight"
                android:id="@+id/hot_sight"
                />
			<Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" 
                android:text="@string/sight_sort"
                android:id="@+id/sight_sort"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" 
            android:showDividers="end">
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/advertisement"
                android:scaleType="fitXY" />
        </LinearLayout>
       	<ScrollView 
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content">
            
		 <LinearLayout
		     android:layout_width="fill_parent"
		     android:layout_height="321dp" >

				<ListView
				    android:id="@+id/city_listview"
				    android:layout_width="fill_parent"
				    android:layout_height="500dp" >

				</ListView>
		</LinearLayout>
				</ScrollView>
    
    </LinearLayout>

</RelativeLayout>
